--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ body{
      padding: 50px 30px;
      min-width: 300px;
      max-width: 300px;
+     min-height: 45px;
+     max-height: 55px;
      color: #555;
      font-size: 16px;
      background:#98d2d9;
@@ -43,8 +45,8 @@ body{
      margin-top: 80px;
      font-size:20px;
      text-align: center;
-    
-     
+     display: table-cell;
+     vertical-align: middle;
 }
 #hukidasi:before{
     content: "";
@@ -64,12 +66,12 @@ body{
     background-color: #FCA7A7; 
     border-radius: 5px;
     font-weight: bold;
-     display: none;
+    display: none;
     font-size: 25px;
     text-align: center;
     width: 300px;
     height: 50px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 80px;
         -webkit-box-shadow: inset 0px 1px 1px #cb998d, 1px 6px 1px 1px #cb998d, 1px 10px 5px gray;
         -moz-box-shadow: inset 0px 1px 1px #cb998d, 1px 6px 1px 1px #cb998d, 1px 10px 5px gray;
