--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 #hukidasi{
      position: absolute;
      bottom:320px;
-     display: block;
+     display:table-cell;
      margin: 1.5em 0;
      padding: 50px 30px;
      min-width: 300px;
@@ -38,12 +38,14 @@ body{
      color: #555;
      font-size: 16px;
      background:#98d2d9;
-     /*#e0edff*/
-
      border-radius:15px;
      margin-left: 52px;
      margin-top: 80px;
      font-size:20px;
+     text-align: center;
+     vertical-align: middle;
+}
+#hukidasi p{
      text-align: center;
      display: table-cell;
      vertical-align: middle;
